tests/invalid/unknown_chars.drs
// Archivo con caracteres desconocidos

despegar;
mover norte 10#;
rotar @90;
aterrizar$;
